# cpp-opencv-example-1

./: CMakeLists.txt  cpp-opencv-example-1.pages  helper.cpp  helper.hpp  helper_functions.h  main.cpp
lib/binops/: CMakeLists.txt
lib/binops/include/: binops.hpp
lib/binops/src/: addition.cpp
lib/binops/test/: addition_tests.cpp  main.cpp
